Towards final version

--- a/ICCV/egbib.bib
+++ b/ICCV/egbib.bib
@@ -6,6 +6,15 @@ booktitle ={CVPR},
 publisher = {IEEE}
 }
 
+@article{Lior,
+year = {2005},
+author = {Rokach, Lior and Oded Maimon},
+title = "{Clustering methods}",
+booktitle = {Data mining and knowledge discovery handbook},
+publisher = {Springer},
+pages= {321--352}
+}
+
 @inproceedings{Gao,
 year={2011},
 author = {Junhong Gao and Seon Joo Kim and Brown, M.S.},
@@ -13,6 +22,29 @@ title = {Constructing image panoramas using dual-homography warping},
 booktitle ={CVPR},
 publisher = {IEEE}
 }
+
+@inproceedings{Bay,
+year={2006},
+author = {Herbert Bay and Tinne Tuytelaars and Luc Van Gool},
+title = "{SURF: Speeded Up Robust Features}",
+booktitle ={ECCV},
+publisher = {Springer}
+}
+
+@article{Fischler1981,
+ author = {Fischler, Martin A. and Bolles, Robert C.},
+ title = "{Random Sample Consensus: A Paradigm for Model Fitting with Applications to Image Analysis and Automated Cartography}",
+ journal = {Commun. ACM},
+ issue_date = {June 1981},
+ volume = {24},
+ number = {6},
+ month = jun,
+ year = {1981},
+ issn = {0001-0782},
+ pages = {381--395},
+ numpages = {15},
+ publisher = {ACM}, 
+} 
 
 @inproceedings{Acha,
 year={2005},
@@ -25,7 +57,7 @@ publisher = {IEEE}
 @inproceedings{Eden,
 year={2006},
 author = {Eden, A. and Uyttendaele, M. and Szeliski, R.},
-title = {Seamless Image Stitching of Scenes with Large Motions and Exposure Differences},
+title = "{Seamless Image Stitching of Scenes with Large Motions and Exposure Differences}",
 booktitle ={CVPR},
 publisher = {IEEE}
 }
@@ -48,7 +80,7 @@ publisher = {IEEE}
 
 @inproceedings{Szeliski1997,
  author = {Szeliski, R and Shum, Heung-Yeung},
- title = {Creating Full View Panoramic Image Mosaics and Environment Maps},
+ title = "{Creating Full View Panoramic Image Mosaics and Environment Maps}",
  booktitle = {SIGGRAPH},
  series = {SIGGRAPH '97},
  year = {1997},
@@ -63,13 +95,47 @@ publisher = {IEEE}
     year = {2005}
 }
 
-@inproceedings{Brown,
+@inproceedings{Brown03,
 year={2003},
-author = {Brown, M. ; Lowe, D.G.},
+author = {Brown, M. and Lowe, D.G.},
 title = {Recognising panoramas},
 booktitle ={ICCV},
 publisher = {IEEE}
 }
+
+@inproceedings{Brown05,
+year={2005},
+author = {Brown, M. and Szeliski, R. and Winder, S.},
+title = {Multi-image matching using multi-scale oriented patches},
+booktitle ={CVPR},
+publisher = {IEEE}
+}
+
+
+@inproceedings{Aner,
+year={2002},
+author = {Aya Aner and John R. Kender},
+title = {Video Summaries through Mosaic-Based Shot and Scene Clustering},
+booktitle ={ECCV},
+publisher = {Springer}
+}
+
+@inproceedings{Lee,
+year={2012},
+author = {Y. Lee and J. Ghosh and K. Grauman},
+title = {Discovering important people and objects for egocentric video summarization},
+booktitle ={CVPR},
+publisher = {IEEE}
+}
+
+@inproceedings{Lee,
+year={2000},
+author = {Foote, J. and Kimber, D.},
+title = {FlyCam: practical panoramic video and automatic camera control},
+booktitle ={ICME},
+publisher = {IEEE}
+}
+
 
 @article{Brown07,
 year={2007},
